src/components/Header/Header.scss
@import "~bootstrap/scss/bootstrap";
@import "../../variables";

#header {
  a {
    color: white;
    text-decoration: none;
  }

  #logo {
    font-weight: 600;
  }

  background-color: $wave-colour-main;
  color: white;
  height: $header-height;
  position: fixed;
  width: 100%;
}

#header:after {
  background-color: rgba(100, 100, 100, 0.25);
  content: "";
  height: 3px;
  left: 0;
  position: absolute;
  top: 100%;
  width: 100%;
}

